--- a/translations/it.json
+++ b/translations/it.json
@@ -685,7 +685,9 @@
     "seasonality": "Stagionalità",
     "seasonality_option_1": "Mostra la stagionalità in base alle osservazioni globali di iNaturalist",
     "seasonality_option_2": "Mostra la stagionalità in base alle osservazioni di iNaturalist vicine alla mia posizione corrente (le specie non trovate vicino alla mia posizione, non avranno la stagionalità)",
-    "donate_ios": "Visita il seguente link per fare una donazione a Seek:"
+    "donate_ios": "Visita il seguente link per fare una donazione a Seek:",
+    "change_language": "Cambia la lingua in-app in {{language}}?",
+    "confirm": "Conferma"
   },
   "seek_challenges": {
     "badge": "Distintivo di Seek",
@@ -852,7 +854,8 @@
     "logged_in_bullet_2": "Usa l'app o il sito web di iNaturalist per visualizzare le notifiche di identificazioni, commenti e altre attività sulle tue osservazioni",
     "logged_in_bullet_3": "Le tue osservazioni di Seek NON sono salvate su iNaturalist. Eliminare Seek eliminerà tutte le osservazioni sul tuo dispositivo.",
     "upload_and_track_obs_using_inat": "Carica e tieni traccia delle tue osservazioni usando l'app di iNaturalist o visitando inaturalist.org.\n\nGrazie per esser parte di questa community!",
-    "x_seen_by_user": "{{speciesName}} vista da {{user}}"
+    "x_seen_by_user": "{{speciesName}} vista da {{user}}",
+    "about_inat_internet_error": "Sei connesso a iNaturalist, ma abbiamo bisogno di internet per mostrare i dettagli. Tocca per riprovare."
   },
   "seek_2021_challenges": {
     "august_2021_challenge_name": "Sfida degli Artropodi Predatori",
@@ -953,5 +956,10 @@
     "november_2023_action_trees": "Hai un tipo di albero preferito, o anche un singolo albero preferito? Leggi di più su di esso. In che modo le persone ne traggono beneficio? Come ne traggono beneficio altre piante o animali?",
     "december_2023_challenge_name_ecology": "Sfida dell'Ecologia",
     "december_2023_description_ecology": "Molti tipi diversi di interazioni influenzano gli ecosistemi e i loro organismi. L'ecologia è lo studio degli organismi (biotici) e del loro ambiente fisico (abiotico). Le interazioni biotiche sono tra le cose viventi e le interazioni abiotiche includono i fattori non viventi come temperatura, acqua, luce e suolo."
+  },
+  "seek_year_in_review": {
+    "header": "Anno di Seek in Sintesi",
+    "description": "Grazie per aver utilizzato Seek quest'anno! Scopri il tuo Anno personalizzato in Revisione, qui:",
+    "button": "Visualizza la mia Revisione di Seek"
   }
 }
