--- a/translations/ru.json
+++ b/translations/ru.json
@@ -685,7 +685,9 @@
     "seasonality": "Сезонность",
     "seasonality_option_1": "Показывать сезонность, основанную на наблюдениях iNaturalist по всему миру",
     "seasonality_option_2": "Отображать сезонность на основе наблюдений iNaturalist вблизи моего текущего местоположения (виды, не найденные недалеко от моего местоположения, не будут иметь сезонности)",
-    "donate_ios": "Для пожертвования Seek перейдите по ссылке:"
+    "donate_ios": "Для пожертвования Seek перейдите по ссылке:",
+    "change_language": "Переключить язык приложения на {{language}}?",
+    "confirm": "Подтвердить"
   },
   "seek_challenges": {
     "badge": "значок Seek",
@@ -852,7 +854,8 @@
     "logged_in_bullet_2": "Используйте приложение iNaturalist или веб-сайт для просмотра уведомлений об идентификациях, комментариях и других действиях с вашими наблюдениями",
     "logged_in_bullet_3": "Ваши наблюдения Seek НЕ копируются в iNaturalist. Удаление Seek удалит все наблюдения на вашем устройстве.",
     "upload_and_track_obs_using_inat": "Загружайте и следите за вашими наблюдениями с помощью приложения iNaturalist или веб-сайта inaturalist.org.\n\nСпасибо, что являетесь частью этого сообщества!",
-    "x_seen_by_user": "{{user}} наблюдал {{speciesName}}"
+    "x_seen_by_user": "{{user}} наблюдал {{speciesName}}",
+    "about_inat_internet_error": "Вы вошли в систему iNaturalist, но требуется интернет, чтобы показать детали. Нажмите, чтобы повторить попытку."
   },
   "seek_2021_challenges": {
     "august_2021_challenge_name": "Испытание по беспозвоночным хищникам",
@@ -953,5 +956,10 @@
     "november_2023_action_trees": "У вас есть любимый вид дерева или даже любимое отдельное дерево? Узнайте больше об этом.  Каким образом люди извлекают из этого пользу? Какую пользу получают другие растения или животные?",
     "december_2023_challenge_name_ecology": "Испытание Экология",
     "december_2023_description_ecology": "Различные виды взаимодействия влияют на экосистемы и их организмы. Экология - это изучение организмов (биотическое взаимодействие) и их физической среды (абиотическое взаимодействие). Биотические взаимодействия происходят между живыми существами, а абиотические взаимодействия включают в себя неживые факторы, такие как температура, вода, свет и почва."
+  },
+  "seek_year_in_review": {
+    "header": "Обзор года в Seek",
+    "description": "Спасибо за использование Seek в этом году! Ознакомьтесь с вашим персональным обзором за год здесь:",
+    "button": "Посмотреть мой обзор Seek"
   }
 }
