--- a/translations/af.json
+++ b/translations/af.json
@@ -685,7 +685,9 @@
     "seasonality": "Seisoensgebonde",
     "seasonality_option_1": "Toon seisoensgebondenheid gebaseer op wêreldwye iNaturalis-waarnemings",
     "seasonality_option_2": "Toon seisoensgebondenheid gebaseer op iNaturalist-waarnemings naby my ligging (spesies ver van my ligging sal geen seisoensgebondenheid hê nie)",
-    "donate_ios": "Besoek die volgende skakel om aan Seek te skenk:"
+    "donate_ios": "Besoek die volgende skakel om aan Seek te skenk:",
+    "change_language": "Switch the in-app language to {{language}}?",
+    "confirm": "Confirm"
   },
   "seek_challenges": {
     "badge": "Seek-kenteken",
@@ -852,7 +854,8 @@
     "logged_in_bullet_2": "Gebruik die iNaturalist-toep of -webwerf om kennisgewings of identifikasies, kommentaar en ander aktiwiteit op u waarnemings  te sien",
     "logged_in_bullet_3": "U Seek-waarnemings word na in iNaturalist gerugsteun nie. Deur Seek te skrap word u waarnemings op u toestel ook geskrap.",
     "upload_and_track_obs_using_inat": "Laai u waarnemings op na iNaturalist en hou dit dop op die toep of gaan na inaturalist.org.\n\nDankie dat u deel van die gemeensap is!",
-    "x_seen_by_user": "{{speciesName}} gesien deur {{user}}"
+    "x_seen_by_user": "{{speciesName}} gesien deur {{user}}",
+    "about_inat_internet_error": "You are logged in to iNaturalist, but we need the internet to show details. Tap to try again."
   },
   "seek_2021_challenges": {
     "august_2021_challenge_name": "Geleedpotige Roofdier-uitdaging",
@@ -953,5 +956,10 @@
     "november_2023_action_trees": "Do you have a favorite kind of tree, or even a favorite individual tree? Read more about it. In what ways do people benefit from it? How do other plants or animals benefit?",
     "december_2023_challenge_name_ecology": "Ecology Challenge",
     "december_2023_description_ecology": "Many different kinds of interactions influence ecosystems and their organisms. Ecology is the study of organisms (biotic) and their physical environment (aboitic). Biotic interactions are between living things and aboitic interactions include the non-living factors like temperature, water, light, and soil."
+  },
+  "seek_year_in_review": {
+    "header": "Seek Year in Review",
+    "description": "Thanks for using Seek this year! Check out your personalized Year in Review here:",
+    "button": "View my Seek Review"
   }
 }
