--- a/translations/id.json
+++ b/translations/id.json
@@ -685,7 +685,9 @@
     "seasonality": "Musim",
     "seasonality_option_1": "Tampilkan musim berdasarkan pengamatan dunia iNaturalist",
     "seasonality_option_2": "Tampilkan musim berdasarkan pengamatan iNaturalist di sekitar tempat saya (spesies yang tidak ditemukan di dekat tempat saya tidak akan menunjukkan musimnya)",
-    "donate_ios": "Silakan mengunjungi tautan berikut untuk mengirimkan donasi kepada Seek:"
+    "donate_ios": "Silakan mengunjungi tautan berikut untuk mengirimkan donasi kepada Seek:",
+    "change_language": "Ganti bahasa aplikasi menjadi {{language}}?",
+    "confirm": "Ya"
   },
   "seek_challenges": {
     "badge": "Lencana Seek",
@@ -852,7 +854,8 @@
     "logged_in_bullet_2": "Gunakan aplikasi atau situs web iNaturalist untuk membaca pemberitahuan tentang identifikasi, komentar, dan aktivitas lainnya pada pengamatanmu",
     "logged_in_bullet_3": "Pengamatan Seekmu TIDAK memiliki cadangan di iNaturalist. Menghapus Seek akan menghapus semua pengamatanmu di perangkatmu.",
     "upload_and_track_obs_using_inat": "Unggah dan lacak pengamatanmu dengan menggunakan aplikasi iNaturalist atau mengunjungi inaturalist.org.\n\nTerima kasih telah menjadi bagian dari komunitas ini!",
-    "x_seen_by_user": "{{speciesName}} dilihat oleh {{user}}"
+    "x_seen_by_user": "{{speciesName}} dilihat oleh {{user}}",
+    "about_inat_internet_error": "Kamu sudah masuk ke iNaturalist, tetapi kami perlu internetnya untuk menunjukkan detailnya. Tekan untuk mencoba lagi."
   },
   "seek_2021_challenges": {
     "august_2021_challenge_name": "Tantangan Predator Arthropoda",
@@ -953,5 +956,10 @@
     "november_2023_action_trees": "Apakah kamu memiliki jenis pohon favorit, atau bahkan spesies pohon favorit? Bacalah lebih lanjut tentangnya. Dalam hal apa orang-orang merasakan manfaatnya? Bagaimana cara tanaman atau binatang lain merasakan manfaatnya?",
     "december_2023_challenge_name_ecology": "Tantangan Ekologi",
     "december_2023_description_ecology": "Berbagai jenis interaksi memengaruhi ekosistem-ekosistem beserta organisme di dalamnya. Ekologi adalah ilmu yang mempelajari organisme (biotik) dan lingkungan fisiknya (abiotik). Interaksi biotik adalah interaksi antara makhluk hidup dan interaksi abiotik termasuk faktor-faktor yang tidak hidup seperti suhu, air, cahaya, dan tanah."
+  },
+  "seek_year_in_review": {
+    "header": "Kilas Balik Satu Tahun Seek",
+    "description": "Terima kasih sudah menggunakan Seek tahun ini! Cek Kilas Balik Anda Tahun Ini di sini:",
+    "button": "Lihat Kilas Balik Seek Anda"
   }
 }
