--- a/translations/no.json
+++ b/translations/no.json
@@ -568,7 +568,7 @@
     "joint_initiative": "iNaturalist er et felles initiativ av California Academy of Sciences og National Geographic Society.",
     "original": "Seek ble opprinnelig laget med støtte fra HHMI Tangled Bank Studios og utvidet med støtte fra Our Planet på Netflix og WWF.",
     "designed_by": "Designet og utviklet av iNaturalist-teamet:",
-    "inat_team_credits": "Abhas Misraraj, Amanda Bullington, Alex Shepard, Scott Loarie, Ken-ichi Ueda, Carrie Seltzer, Tony Iwane, Patrick Leary, and Yaron Budowski. Special thanks to Grant Van Horn from Visipedia for help with the computer vision technology, and the iNaturalist community.",
+    "inat_team_credits": "Abhas Misraraj, Amanda Bullington, Alex Shepard, Scott Loarie, Ken-ichi Ueda, Carrie Seltzer, Tony Iwane, Patrick Leary, Johannes Klein, and Yaron Budowski. Special thanks to Grant Van Horn from Visipedia for help with the computer vision technology, and the iNaturalist community.",
     "version": "Versjon",
     "help": "For hjelp med Seek, vennligst send e-post til help+seek@inaturalist.org.",
     "translators": "We are grateful for the translation assistance provided by the crowdin.com community, especially: Abdelghani Hourani, Carnifex, cgalindo, Daniele Seglie, Eduardo Martínez, Édson Souza Jr., Galder Gonzalez Larrañaga, Gideon Wentink, Johan Liljeblad, katunchik, Kevin Matthew, Kiara Suzuki, Lekkim, Marcel Hospers, Martin Reith, Monica Nieminen, Nicolae Liviu, Nuwan Wijayaweera, saariko, Sakatur, Sebastian Jasiński, TheKakarinka, Wouter Koch, and Yulia Lygina.",
@@ -685,7 +685,9 @@
     "seasonality": "Sesongavhengighet",
     "seasonality_option_1": "Display seasonality based on worldwide iNaturalist observations",
     "seasonality_option_2": "Display seasonality based on iNaturalist observations near my current location (species not found near my location will have no seasonality)",
-    "donate_ios": "Besøk følgende link for å donere til Seek:"
+    "donate_ios": "Besøk følgende link for å donere til Seek:",
+    "change_language": "Switch the in-app language to {{language}}?",
+    "confirm": "Confirm"
   },
   "seek_challenges": {
     "badge": "Seek merke",
@@ -852,7 +854,8 @@
     "logged_in_bullet_2": "Bruk iNaturalist-appen eller -nettsiden til å se varsler om identifikasjoner, kommentarer og annen aktivitet knyttet til observasjonene dine",
     "logged_in_bullet_3": "Seek-observasjonene dine er ikke sikkerhetskopiert til iNaturalist. Sletting av appen Seek vil føre til sletting av alle observasjonene på enheten din.",
     "upload_and_track_obs_using_inat": "Last opp og hold oversikt over observasjonene dine ved å bruke iNaturalist-appen eller besøke inaturalist.org.\n\nTakk for at du er en del av samfunnet!",
-    "x_seen_by_user": "{{speciesName}} sett av {{user}}"
+    "x_seen_by_user": "{{speciesName}} sett av {{user}}",
+    "about_inat_internet_error": "You are logged in to iNaturalist, but we need the internet to show details. Tap to try again."
   },
   "seek_2021_challenges": {
     "august_2021_challenge_name": "Arthropod Predator Challenge",
@@ -953,5 +956,10 @@
     "november_2023_action_trees": "Do you have a favorite kind of tree, or even a favorite individual tree? Read more about it. In what ways do people benefit from it? How do other plants or animals benefit?",
     "december_2023_challenge_name_ecology": "Ecology Challenge",
     "december_2023_description_ecology": "Many different kinds of interactions influence ecosystems and their organisms. Ecology is the study of organisms (biotic) and their physical environment (aboitic). Biotic interactions are between living things and aboitic interactions include the non-living factors like temperature, water, light, and soil."
+  },
+  "seek_year_in_review": {
+    "header": "Seek Year in Review",
+    "description": "Thanks for using Seek this year! Check out your personalized Year in Review here:",
+    "button": "View my Seek Review"
   }
 }
