--- a/translations/pt-BR.json
+++ b/translations/pt-BR.json
@@ -685,7 +685,9 @@
     "seasonality": "Sazonalidade",
     "seasonality_option_1": "Mostrar sazonalidade com base em observações mundiais do iNaturalist",
     "seasonality_option_2": "Mostrar sazonalidade com base em observações do iNaturalist próximo da minha localização atual (espécies não encontradas perto da minha localização não terão sazonalidade)",
-    "donate_ios": "Por favor, visite o seguinte link para fazer uma doação ao Seek:"
+    "donate_ios": "Por favor, visite o seguinte link para fazer uma doação ao Seek:",
+    "change_language": "Switch the in-app language to {{language}}?",
+    "confirm": "Confirm"
   },
   "seek_challenges": {
     "badge": "Insígnia do Seek",
@@ -852,7 +854,8 @@
     "logged_in_bullet_2": "Use o aplicativo iNaturalist ou site para ver as notificações de identificações, comentários e outras atividades nas suas observações",
     "logged_in_bullet_3": "As suas observações do Seek NÃO foram salvas no iNaturalist. Quando desinstalar o Seek, todas as observações serão apagadas do seu dispositivo.",
     "upload_and_track_obs_using_inat": "Carregue e acompanhe suas observações usando o aplicativo iNaturalist ou visitando inaturalist.org.\n\nObrigado por fazer parte desta comunidade!",
-    "x_seen_by_user": "{{speciesName}} visto por {{user}}"
+    "x_seen_by_user": "{{speciesName}} visto por {{user}}",
+    "about_inat_internet_error": "You are logged in to iNaturalist, but we need the internet to show details. Tap to try again."
   },
   "seek_2021_challenges": {
     "august_2021_challenge_name": "Desafio de Artrópodes Predadores ",
@@ -953,5 +956,10 @@
     "november_2023_action_trees": "Do you have a favorite kind of tree, or even a favorite individual tree? Read more about it. In what ways do people benefit from it? How do other plants or animals benefit?",
     "december_2023_challenge_name_ecology": "Ecology Challenge",
     "december_2023_description_ecology": "Many different kinds of interactions influence ecosystems and their organisms. Ecology is the study of organisms (biotic) and their physical environment (aboitic). Biotic interactions are between living things and aboitic interactions include the non-living factors like temperature, water, light, and soil."
+  },
+  "seek_year_in_review": {
+    "header": "Seek Year in Review",
+    "description": "Thanks for using Seek this year! Check out your personalized Year in Review here:",
+    "button": "View my Seek Review"
   }
 }
