--- a/translations/si.json
+++ b/translations/si.json
@@ -568,7 +568,7 @@
     "joint_initiative": "iNaturalist යනු California Academy of Sciences සහ National Geographic Society හි ඒකාබද්ධ මුලපිරීමකි.",
     "original": "Seek මුලින් නිර්මාණය කරන ලද්දේ HHMI Tangled Bank Studios හි සහාය ඇතිව වන අතර Netflix හි Our Planet සහ WWF හි සහාය ඇතිව වැඩි දියුණු කරන ලදි.",
     "designed_by": "iNaturalist කණ්ඩායම විසින් නිර්මාණය කර සංවර්ධනය කරන ලදි:",
-    "inat_team_credits": "Abhas Misraraj, Amanda Bullington, Alex Shepard, Scott Loarie, Ken-ichi Ueda, Carrie Seltzer, Tony Iwane, Patrick Leary, and Yaron Budowski. Special thanks to Grant Van Horn from Visipedia for help with the computer vision technology, and the iNaturalist community.",
+    "inat_team_credits": "Abhas Misraraj, Amanda Bullington, Alex Shepard, Scott Loarie, Ken-ichi Ueda, Carrie Seltzer, Tony Iwane, Patrick Leary, Johannes Klein, and Yaron Budowski. Special thanks to Grant Van Horn from Visipedia for help with the computer vision technology, and the iNaturalist community.",
     "version": "අනුවාදය",
     "help": "Seek සඳහා උදව් උදෙසා, කරුණාකර help+seek@inaturalist.org වෙත විද්‍යුත් තැපෑලෙන් එවන්න.",
     "translators": "We are grateful for the translation assistance provided by the crowdin.com community, especially: Abdelghani Hourani, Carnifex, cgalindo, Daniele Seglie, Eduardo Martínez, Édson Souza Jr., Galder Gonzalez Larrañaga, Gideon Wentink, Johan Liljeblad, katunchik, Kevin Matthew, Kiara Suzuki, Lekkim, Marcel Hospers, Martin Reith, Monica Nieminen, Nicolae Liviu, Nuwan Wijayaweera, saariko, Sakatur, Sebastian Jasiński, TheKakarinka, Wouter Koch, and Yulia Lygina.",
@@ -685,7 +685,9 @@
     "seasonality": "සෘතුමයභාවය",
     "seasonality_option_1": "ලොව පුරා iNaturalist නිරීක්ෂණ මත පදනම්ව සෘතුමයභාවය පෙන්වන්න",
     "seasonality_option_2": "මගේ වර්තමාන ස්ථානය අසල iNaturalist නිරීක්ෂණ මත පදනම්ව සෘතුමයභාවය ප්‍රදර්ශනය කරන්න (මගේ ස්ථානය අසල හමු නොවූ විශේෂයන්ට සෘතුමයභාවයක් නොමැත)",
-    "donate_ios": "Please visit the following link to make a donation to Seek:"
+    "donate_ios": "Please visit the following link to make a donation to Seek:",
+    "change_language": "Switch the in-app language to {{language}}?",
+    "confirm": "Confirm"
   },
   "seek_challenges": {
     "badge": "Seek ලාංඡනය",
@@ -852,7 +854,8 @@
     "logged_in_bullet_2": "Use the iNaturalist app or website to view notifications of identifications, comments, and other activity on your observations",
     "logged_in_bullet_3": "Your Seek observations are NOT backed up to iNaturalist. Deleting Seek will delete all the observations on your device.",
     "upload_and_track_obs_using_inat": "Upload and keep track of your observations using the iNaturalist app or visiting inaturalist.org.\n\nThanks for being part of this community!",
-    "x_seen_by_user": "{{speciesName}} seen by {{user}}"
+    "x_seen_by_user": "{{speciesName}} seen by {{user}}",
+    "about_inat_internet_error": "You are logged in to iNaturalist, but we need the internet to show details. Tap to try again."
   },
   "seek_2021_challenges": {
     "august_2021_challenge_name": "Arthropod Predator Challenge",
@@ -953,5 +956,10 @@
     "november_2023_action_trees": "Do you have a favorite kind of tree, or even a favorite individual tree? Read more about it. In what ways do people benefit from it? How do other plants or animals benefit?",
     "december_2023_challenge_name_ecology": "Ecology Challenge",
     "december_2023_description_ecology": "Many different kinds of interactions influence ecosystems and their organisms. Ecology is the study of organisms (biotic) and their physical environment (aboitic). Biotic interactions are between living things and aboitic interactions include the non-living factors like temperature, water, light, and soil."
+  },
+  "seek_year_in_review": {
+    "header": "Seek Year in Review",
+    "description": "Thanks for using Seek this year! Check out your personalized Year in Review here:",
+    "button": "View my Seek Review"
   }
 }
