--- a/translations/en.json
+++ b/translations/en.json
@@ -975,7 +975,8 @@
     "observations_map": "Observations Map",
     "view_observations_map": "View Observations Map",
     "iNaturalist": "iNaturalist",
-    "uploaded_observations_text": "You posted {{count}} observations to iNaturalist using Seek in {{year}}. Thank you for contributing to our community!",
+    "uploaded_observations_text_1": "You posted {{count}} observations to iNaturalist using Seek in {{year}}.",
+    "uploaded_observations_text_2": "Thank you for contributing to our community!",
     "observed_in": "{{speciesName}} observed in {{place}}",
     "challenges": "Challenges",
     "challenges_earned_text": "You earned {{count}} challenge badges in {{year}}.",
